#added quotes and testimoni section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="plugins/slick/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <!--Local stylesheet and others-->
 </head>
@@ -409,15 +410,114 @@
                             </div>
 
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
     <!--What we do section-->
+
+    <!--Quotes section-->
+    <section class="qts-sec" id="quotes-1">
+        <div class="container">
+            <!--Custom arrow-->
+            <button class="slick-cs-prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="slick-cs-next"><i class="fas fa-chevron-right"></i></button>
+            <div class="qts-wrap row justify-content-center">
+
+                <!--Single item start-->
+                <div class="qts-single d-flex justify-content-center">
+                    <div class="col-10 d-flex align-items-center">
+                        <div class="qts-icn text-center">
+                            <span class="d-flex align-items-center justify-content-center">
+                                <i class="fas fa-envelope-open-text"></i>
+                            </span>
+                        </div>
+                        <div class="qts-cnt">
+                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
+                            <h6>Jon Doe</h6>
+                        </div>
+                    </div>
+                </div>
+                <!--Single item end-->
+
+                <!--Single item start-->
+                <div class="qts-single d-flex justify-content-center">
+                    <div class="col-10 d-flex align-items-center">
+                        <div class="qts-icn text-center">
+                            <span class="d-flex align-items-center justify-content-center">
+                                <i class="fas fa-envelope-open-text"></i>
+                            </span>
+                        </div>
+                        <div class="qts-cnt">
+                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                            <h6>Jon Doe</h6>
+                        </div>
+                    </div>
+                </div>
+                <!--Single item end-->
+            </div>
+        </div>
+    </section>
+    <!--Quotes section-->
+
+
+
+
+
+
+
+
+    <!--Quotes section-->
+    <section class="testimoni-sec" id="quotes-2">
+        <div class="container">
+            <!--Custom arrow-->
+            <button class="slick-cs2-prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="slick-cs2-next"><i class="fas fa-chevron-right"></i></button>
+            <div class="testimoni-wrap row justify-content-center">
+                <!--Single item start-->
+                <div class="testimoni-single d-flex justify-content-center">
+                    <div class="col-10 d-flex align-items-center">
+                        <div class="testimoni-icn text-center">
+                            <span class="d-flex align-items-center justify-content-center">
+                                <i class="fas fa-envelope-open-text"></i>
+                            </span>
+                        </div>
+                        <div class="testimoni-cnt">
+                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
+                            <h6>Jon Doe</h6>
+                        </div>
+                    </div>
+                </div>
+                <!--Single item end-->
+
+                <!--Single item start-->
+                <div class="testimoni-single d-flex justify-content-center">
+                    <div class="col-10 d-flex align-items-center">
+                        <div class="testimoni-icn text-center">
+                            <span class="d-flex align-items-center justify-content-center">
+                                <i class="fas fa-envelope-open-text"></i>
+                            </span>
+                        </div>
+                        <div class="testimoni-cnt">
+                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                            <h6>Jon Doe</h6>
+                        </div>
+                    </div>
+                </div>
+                <!--Single item end-->
+            </div>
+        </div>
+    </section>
+    <!--Quotes section-->
 
 
 
@@ -433,6 +533,7 @@
 
     <!--Local scripts-->
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="plugins/slick/slick.min.js"></script>
     <script src="js/main.js"></script>
     <!--Local scripts-->
 
