--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <!--Header section-->
-    <header class="fixed-top">
+    <header class="fixed-top d-flex align-items-center">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">MoGo</a>
@@ -54,8 +54,7 @@
                         </li>
                         <li class="nav-icons nav">
                             <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
-                            <a class="nav-link" href="#" style="border-right:1px solid pink"><i
-                                    class="fas fa-search"></i></a>
+                            <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -466,13 +465,192 @@
     <!--Quotes section-->
 
 
+    <!--Team section-->
+    <section class="team-sec sec-padding text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 sec-title">
+                    <p>What we do</p>
+                    <h1>Story about us</h1>
+                </div>
+                <div class="team-cnt sec-inr-padding col-12">
+                    <div class="sec-inr-txt col-12">
+                        <p class="pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+
+                    <div class="team-itm-wrp d-flex justify-content-center">
+                        <div class="team-singl-wrp col-4">
+                            <div class="team-singl">
+                                <img src="images/team-1.png" alt="story1" class="img-fluid">
+
+                                <ul class="team-social">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                </ul>
+
+                            </div>
+                            <div class="team-title">
+                                <h6>Matthew Dix</h6>
+                                <p>Graphic Design</p>
+                            </div>
+                        </div>
+
+                        <div class="team-singl-wrp col-4">
+                            <div class="team-singl">
+                                <img src="images/team-2.png" alt="story1" class="img-fluid">
+                                <ul class="team-social">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="team-title">
+                                <h6>Christopher Campbell</h6>
+                                <p>Branding/UX design</p>
+                            </div>
+                        </div>
+
+                        <div class="team-singl-wrp col-4">
+                            <div class="team-singl">
+                                <img src="images/team-3.png" alt="story1" class="img-fluid">
+                                <ul class="team-social">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="team-title">
+                                <h6>Michael Fertig</h6>
+                                <p>Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Team section-->
+
+
+    <section class="cmp-sec">
+        <div class="container">
+            <div class="col">
+                <img src="images/companies.png" alt="companies" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+
+
+    <!--Showcase section-->
+    <section class="showcase-sec sec-padding text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 sec-title">
+                    <p>What we do</p>
+                    <h1>some of our work</h1>
+                </div>
+                <div class="showcase-cnt sec-inr-padding col-12">
+                    <div class="sec-inr-txt col-12">
+                        <p class="pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="showcase-itm-wrp d-flex justify-content-center">
+
+            <div class="col-3">
+                <div class="showcase-img">
+                    <img src="images/showcase-1.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <div class="showcase-img">
+                    <img src="images/showcase-2.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="showcase-img">
+                    <img src="images/showcase-3.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <div class="showcase-img">
+                    <img src="images/showcase-4.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-3">
+                <div class="showcase-img">
+                    <img src="images/showcase-5.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-3">
+                <div class="showcase-img">
+                    <img src="images/showcase-6.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <div class="showcase-img">
+                    <img src="images/showcase-7.png" alt="work" class="img-fluid">
+                    <div class="showcase-img-title">
+                        <span><i class="fas fa-camera-retro"></i></span>
+                        <h6>creatively designed</h6>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!--showcase section-->
 
 
 
 
-
-
-    <!--Quotes section-->
+    <!--Testimonial section-->
     <section class="testimoni-sec" id="quotes-2">
         <div class="container">
             <!--Custom arrow-->
@@ -521,6 +699,9 @@
 
 
 
+
+
+
     <!--External Scripts-->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
@@ -528,7 +709,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.5.0/parallax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
-    <!--External Scripts-->
+    <!--Testimonial Scripts-->
 
 
     <!--Local scripts-->
