complete all section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="fixed-top d-flex align-items-center">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">MoGo</a>
+                <a class="navbar-brand" href="index.html">MoGo</a>
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -648,8 +648,6 @@
     <!--showcase section-->
 
 
-
-
     <!--Testimonial section-->
     <section class="testimoni-sec" id="quotes-2">
         <div class="container">
@@ -695,7 +693,297 @@
             </div>
         </div>
     </section>
-    <!--Quotes section-->
+    <!--Testimonial section-->
+
+
+    <!--What people say section-->
+    <section class="wps-sec sec-padding text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 sec-title">
+                    <p>We work with</p>
+                    <h1>Amazing Services</h1>
+                </div>
+                <div class="wps-cnt sec-inr-padding col-12">
+
+                    <div class="p-2">
+                        <div class="wps-itm-wrp d-flex justify-content-center flex-wrap">
+                            <div class="wps-singl-wrp text-left col-6 p-3">
+                                <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
+                                    <div class="wps-sin-img">
+                                        <img src="images/people-1.png" alt="people">
+                                    </div>
+                                    <div class="wps-sin-txt">
+                                        <h6>Matthew Dix</h6>
+                                        <p class="ppl-title">Graphic Design</p>
+                                        <p class="ppl-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                            minim.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="wps-singl-wrp text-left col-6 p-3">
+                                <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
+                                    <div class="wps-sin-img">
+                                        <img src="images/people-2.png" alt="people">
+                                    </div>
+                                    <div class="wps-sin-txt">
+                                        <h6>Nick Karvounis</h6>
+                                        <p class="ppl-title">Web developer</p>
+                                        <p class="ppl-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                            minim.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="wps-singl-wrp text-left col-6 p-3">
+                                <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
+                                    <div class="wps-sin-img">
+                                        <img src="images/people-3.png" alt="people">
+                                    </div>
+                                    <div class="wps-sin-txt">
+                                        <h6>Jaelynn Castillo</h6>
+                                        <p class="ppl-title">Front end developer</p>
+                                        <p class="ppl-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                            minim.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="wps-singl-wrp text-left col-6 p-3">
+                                <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
+                                    <div class="wps-sin-img">
+                                        <img src="images/people-4.png" alt="people">
+                                    </div>
+                                    <div class="wps-sin-txt">
+                                        <h6>Mike Petrucci</h6>
+                                        <p class="ppl-title">SEO Analyst</p>
+                                        <p class="ppl-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                            minim.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!--What people say section-->
+
+
+    <!--blog section-->
+    <section class="blog-sec sec-padding text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 sec-title">
+                    <p>Our stories</p>
+                    <h1>Latest blog</h1>
+                </div>
+                <div class="blog-cnt sec-inr-padding col-12">
+                    <div class="sec-inr-txt col-12">
+                        <p class="pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+
+                    <div class="blog-itm-wrp d-flex justify-content-center">
+                        <div class="blog-singl-wrp col-4 text-left">
+                            <div class="blog-singl">
+                                <div class="blog-singl-img">
+                                    <img src="images/blog-1.png" alt="story1" class="img-fluid">
+                                    <ul class="date text-center ">
+                                        <li>15</li>
+                                        <li>Jan</li>
+                                    </ul>
+                                </div>
+                                <div class="blog-singl-cont">
+                                    <h6>Lorem ipsum dolor sit amet</h6>
+                                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.</p>
+                                    <div class="divider"></div>
+                                    <ul class="nav">
+                                        <li><i class="fas fa-eye"></i>542</li>
+                                        <li><i class="fas fa-comment-dots"></i>17</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="blog-singl-wrp col-4 text-left">
+                            <div class="blog-singl">
+                                <div class="blog-singl-img">
+                                    <img src="images/blog-2.png" alt="story1" class="img-fluid">
+                                    <ul class="date text-center ">
+                                        <li>14</li>
+                                        <li>Jan</li>
+                                    </ul>
+                                </div>
+                                <div class="blog-singl-cont">
+                                    <h6>Lorem ipsum dolor sit amet</h6>
+                                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.</p>
+                                    <div class="divider"></div>
+                                    <ul class="nav">
+                                        <li><i class="fas fa-eye"></i>542</li>
+                                        <li><i class="fas fa-comment-dots"></i>17</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="blog-singl-wrp col-4 text-left">
+                            <div class="blog-singl">
+                                <div class="blog-singl-img">
+                                    <img src="images/blog-3.png" alt="story1" class="img-fluid">
+                                    <ul class="date text-center ">
+                                        <li>12</li>
+                                        <li>Jan</li>
+                                    </ul>
+                                </div>
+                                <div class="blog-singl-cont">
+                                    <h6>Lorem ipsum dolor sit amet</h6>
+                                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.</p>
+                                    <div class="divider"></div>
+                                    <ul class="nav">
+                                        <li><i class="fas fa-eye"></i>542</li>
+                                        <li><i class="fas fa-comment-dots"></i>17</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--blog section-->
+
+
+    <!--Map section-->
+    <section class="map-sec">
+        <div class="container">
+            <div class="col text-center">
+                <div class="col-12 map-title">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h4>Open Map</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Map section-->
+
+    <!--Footer section-->
+    <footer class="sec-padding">
+        <div class="container">
+            <div class="col-12 d-flex flex-row">
+                <div class="ftr-cnt col-5">
+                    <a href="index.html" class="navbar-brand">MoGo</a>
+                    <p class="ftr-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+
+                    <p class="lk-count"><span>15k</span> followers</p>
+                    <div class="divider"></div>
+                    <ul class="ftr-scl-link nav">
+                        <li>Follow Us:</li>
+                        <li><i class="fab fa-facebook-f"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-pinterest-p"></i></li>
+                        <li><i class="fab fa-google-plus-g"></i></li>
+                        <li><i class="fab fa-youtube"></i></li>
+                        <li><i class="fab fa-dribbble"></i></li>
+                        <li><i class="fab fa-behance"></i></li>
+                    </ul>
+
+                    <form action="" class="ftr-form">
+                        <input type="email" placeholder="Your Email...">
+                        <input type="submit" value="SUBSCRIBE">
+                    </form>
+                </div>
+                <div class="col-4 ftr-blog">
+                    <div class="ftr-blog-title">
+                        <h6>Blogs</h6>
+                    </div>
+                    <div class="ftr-blog-wrp">
+                        <div class="ftr-blog-singl d-flex align-items-center">
+                            <div class="ftr-blog-img">
+                                <img src="images/footer-blog-1.png" alt="blog">
+                            </div>
+                            <div class="ftr-blog-cnt">
+                                <h6>Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing</h6>
+                                <p>Jan 9, 2016</p>
+                            </div>
+                        </div>
+
+                        <div class="ftr-blog-singl d-flex align-items-center">
+                            <div class="ftr-blog-img">
+                                <img src="images/footer-blog-2.png" alt="blog">
+                            </div>
+                            <div class="ftr-blog-cnt">
+                                <h6>Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing</h6>
+                                <p>Jan 9, 2016</p>
+                            </div>
+                        </div>
+
+                        <div class="ftr-blog-singl d-flex align-items-center">
+                            <div class="ftr-blog-img">
+                                <img src="images/footer-blog-3.png" alt="blog">
+                            </div>
+                            <div class="ftr-blog-cnt">
+                                <h6>Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing</h6>
+                                <p>Jan 9, 2016</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-3 ftr-insta">
+                    <div class="ftr-insta-title">
+                        <h6>Instagram</h6>
+                    </div>
+
+                    <div class="ftr-insta-imgs">
+                        <a href="#"><img src="images/footer-insta-1.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-2.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-3.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-4.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-5.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-6.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-7.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-8.png" alt="Instagram" class="img-fluid"></a>
+                        <a href="#"><img src="images/footer-insta-9.png" alt="Instagram" class="img-fluid"></a>
+                    </div>
+                    <a class="insta-link" href="#">View more photos</a>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="ftr-copy text-center">
+                <p>&copy 2020 MoGo template by <span><a href="#">Mahmud</a></span></p>
+            </div>
+        </div>
+    </footer>
+    <!--Footer section-->
+
 
 
 
