partial collapse issue fixed

--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
                                     </a>
                                 </div>
 
+                                <!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                    data-parent="#accordion1"> -->
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordion1">
                                     <div class="collapse-inr">
@@ -911,7 +913,7 @@
                         <li><i class="fab fa-behance"></i></li>
                     </ul>
 
-                    <form action="" class="ftr-form">
+                    <form action="" class="ftr-form d-flex align-items-center">
                         <input type="email" placeholder="Your Email...">
                         <input type="submit" value="SUBSCRIBE">
                     </form>
@@ -976,7 +978,9 @@
                     <a class="insta-link" href="#">View more photos</a>
                 </div>
             </div>
+
             <div class="divider"></div>
+
             <div class="ftr-copy text-center">
                 <p>&copy 2020 MoGo template by <span><a href="#">Mahmud</a></span></p>
             </div>
